Ganamos: Compilador funciona